<resources>
    <string name="app_name">脉搏监测系统</string>
    <string name="app_exithint">再单击一次退出程序</string>

    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="login_nameHint">请输入用户名</string>
    <string name="login_pwdHint">请输入密码</string>
    <string name="login_emptyNameHint">用户名为空</string>
    <string name="login_emptyPwdHint">密码为空</string>
    <string name="login_failuerLogin">用户名或密码错误</string>


    <string name="register_reconfirmPwd">确认密码</string>
    <string name="register_register">确定注册</string>
    <string name="register_succeed">注册成功</string>

    <string-array name="register_username_error">
        <item>@string/register_username_notUnique</item>
        <item>@string/register_username_errorLength</item>
    </string-array>
    <string name="register_username_notUnique">用户名已经存在</string>
    <string name="register_username_errorLength">用户长度为2~10个字符</string>

    <string-array name="register_userpwd_error">
        <item>@string/register_userpwd_errorFormat</item>
        <item>@string/register_userpwd_errorLength</item>
    </string-array>
    <string name="register_userpwd_errorFormat">密码只能包含英文大小写与数字字符</string>
    <string name="register_userpwd_errorLength">密码长度为9~16</string>

    <string-array name="register_userpedRe_error">
        <item>@string/register_userpwd_disaffinity</item>
    </string-array>
    <string name="register_userpwd_disaffinity">两次输入密码不同</string>

    <string-array name="register_userage_error">
        <item>@string/register_userage_outRange</item>
    </string-array>
    <string name="register_userage_outRange">年龄范围(0~200)</string>

    <string-array name="register_usertel_error">
        <item>@string/register_usertel_outLength</item>
    </string-array>
    <string name="register_usertel_outLength">电话号码过长</string>

    <string name="register_savefailure">注册失败，请重新注册</string>

    <!--    用户信息    -->
    <string name="units_userinfo_name">用户名</string>
    <string name="units_userinfo_password">密码</string>
    <string name="units_userinfo_gender">性别</string>
    <string name="units_userinfo_age">年龄</string>
    <string name="units_userinfo_tel">联系电话</string>

    <!--    主页导航栏选项 -->
    <!--    Navigation页文字定义  -->
    <string-array name="navigation_optitem_name">
        <item name="navigation_optname_monitor">实时诊断</item>
        <item name="navigation_optname_history">历史数据</item>
        <item name="navigation_optname_set">我的设置</item>
        <item name="navigation_optname_logout">注销</item>
    </string-array>

    <string name="navigation_logout_hint">确定要注销账号，重新登录</string>

    <integer-array name="navigation_optionitem_icon">
        <item name="navigation_opticon_monitor">@drawable/icon_optionitem_monitor</item>
        <item name="navigation_opticon_history">@drawable/icon_optionitem_playback</item>
        <item name="navigation_opticon_set">@drawable/icon_optionitem_set</item>
        <item name="navigation_opticon_logout">@drawable/icon_optionitem_logout</item>
    </integer-array>

    <!-- 	性别	 -->
    <string name="units_gender">性别</string>
    <string name="units_gender_man">男</string>
    <string name="units_gender_woman">女</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
