<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="userViewModel"
            type="com.mvvm.zzy.plusemonitorwithbluetooth.ViewModel.EditTextViewModel.UserViewModel" />

        <variable
            name="registerViewModel"
            type="com.mvvm.zzy.plusemonitorwithbluetooth.ViewModel.ButtonViewModel.RegisterButtonViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/login_rl_register_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        android:clipToPadding="false"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/login_rl_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/login_til_password"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/login_et_username"
                    addTextChangedListener="@{userViewModel.userNameWatcher}"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_background"
                    android:hint="@string/units_userinfo_name"
                    android:textColor="@color/editViewText"
                    android:textColorHint="@color/editViewHintText" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/register_til_tel"
                android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/login_et_password"
                    addTextChangedListener="@{userViewModel.userPwdWatcher}"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_background"
                    android:hint="@string/login_pwdHint"
                    android:inputType="textPassword"
                    android:textColor="@color/editViewText"
                    android:textColorHint="@color/editViewHintText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_til_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/register_til_tel"
                android:layout_marginBottom="20dp"
                android:background="@color/appBackground"
                android:theme="@style/TextInputLayoutTheme"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorHint"
                app:ageInputErrorHint="@{@string/register_age_outrange}"
                >

                <EditText
                    addTextChangedListener="@{userViewModel.userAgeWatcher}"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/units_userinfo_age"
                    android:textColor="@color/editViewText"
                    android:textColorHint="@color/editViewHintText"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_til_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/login_btn_login"
                android:layout_marginBottom="24dp"
                android:background="@color/appBackground"
                android:theme="@style/TextInputLayoutTheme"
                app:counterEnabled="true"
                app:counterTextAppearance="@style/NormalHint"
                app:counterOverflowTextAppearance="@style/ErrorHint"
                app:counterMaxLength="11">

                <EditText
                    addTextChangedListener="@{userViewModel.userTelephoneWatcher}"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/units_userinfo_tel"
                    android:textColor="@color/editViewText"
                    android:textColorHint="@color/editViewHintText" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_background"
                android:onClick="@{registerViewModel.buttonChangedListener}"
                android:padding="5dp"
                android:text="@string/register_register"
                android:textColor="@color/buttonText"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>

</layout>